# hn2supernote

./: .env.example  .gitignore  LICENSE  README.md  hn2sn.py  requirements.txt
plane-tui/: Cargo.toml  README.md  build.rs
plane-tui/design/: plane-tui.html
plane-tui/scripts/: fake-agent.sh  install-hooks.sh  install-pti.sh
plane-tui/scripts/git-hooks/: _pti-autobuild.sh  post-merge  post-rewrite
plane-tui/src/: business_context.md  jobs.rs  main.rs
sendtosupernote/: README.md  TODO.md
sendtosupernote/app/: main.py  processing.py
sendtosupernote/extension/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
supernote_uploader/: README.md  pyproject.toml
supernote_uploader/src/supernote_uploader/: __init__.py  cli.py  client.py  exceptions.py  models.py
supernote_uploader/src/supernote_uploader/_internal/: __init__.py  sn_client.py
supernote_uploader/tests/: __init__.py  conftest.py  helpers.py  test_auth.py  test_cli.py  test_client.py  test_folders.py  test_upload.py
telegram-bot/: .env.example  README.md  bot.py  config.py  processing.py  pyproject.toml
